<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:theme="@style/container_fragment"
    android:id="@+id/layout_create_item"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="?attr/actionBarSize"
    tools:context="com.hotstuff.ui.create.CreateItemFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/container_fragment">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_name_container"
            style="@style/text_input_layout"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_name_text"
                style="@style/text_input_field"
                android:inputType="textCapWords"
                android:hint="@string/label_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_quantity_container"
            style="@style/text_input_layout"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_quantity_text"
                style="@style/text_input_field"
                android:inputType="number"
                android:hint="@string/label_quantity"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_category_container"
            style="@style/text_input_layout"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/create_category_text"
                style="@style/text_input_field"
                android:inputType="textAutoCorrect"
                android:paddingHorizontal="16dp"
                android:textSize="16sp"
                app:simpleItems="@array/autocomplete_categories"
                android:hint="@string/label_category"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_room_container"
            style="@style/text_input_layout"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/create_room_text"
                style="@style/text_input_field"
                android:inputType="textAutoCorrect"
                android:paddingHorizontal="16dp"
                android:textSize="16sp"
                app:simpleItems="@array/autocomplete_rooms"
                android:hint="@string/label_room"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_make_container"
            style="@style/text_input_layout"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_make_text"
                style="@style/text_input_field"
                android:inputType="textAutoCorrect"
                android:hint="@string/label_make"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_value_container"
            style="@style/text_input_layout"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_value_text"
                style="@style/text_input_field"
                android:inputType="numberDecimal"
                android:hint="@string/label_value"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_description_container"
            style="@style/text_input_layout"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_description_text"
                style="@style/text_input_field"
                android:inputType="textAutoCorrect"
                android:hint="@string/label_description"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/create_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:cropToPadding="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:elevation="8dp"
            app:shapeAppearanceOverlay="@style/image_rounded"
            app:srcCompat="@drawable/image_default_item"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_create_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="?attr/colorPrimaryVariant"
                android:text="@string/label_take_photo"
                android:layout_weight=".5"
                app:icon="@drawable/icon_camera"
                app:iconTint="?attr/colorPrimaryVariant" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_create_select_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/colorPrimaryVariant"
                android:text="@string/label_select_photo"
                android:layout_weight=".5"
                app:icon="@drawable/icon_gallery"
                app:iconTint="?attr/colorPrimaryVariant" />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_save_item"
            android:textColor="?attr/colorPrimaryVariant"/>
    </LinearLayout>
</ScrollView>