...
<!--    <string name="db_column_building_name">NAME</string>-->
<!--    <string name="db_column_building_type">TYPE</string>-->
<!--    <string name="db_column_building_description">DESCRIPTION</string>-->
<!--    <string name="db_column_result">TOTAL</string>-->
    <!-- Toasts-->
    <string name="toast_no_app">No app found to open this</string>
    <string name="toast_addItem_success">Item saved</string>
    <string name="toast_addItem_fail">Save failed. Please send a bug report</string>
    <string name="toast_updateItem_success">Item updated</string>
    <string name="toast_updateItem_fail">Update failed. Please send a bug report</string>
    <string name="toast_deleteItem_success">Item deleted</string>
    <string name="toast_deleteItem_fail">Delete failed. Please send a bug report</string>
    <string name="toast_addBuilding_success">Building saved</string>
...
